fix z-index for window

--- a/styles/style.css
+++ b/styles/style.css
@@ -38,9 +38,9 @@ html {
         position: absolute;
         top: 84%;
         right: 3%;
-        width: 60px;
+        width: 38px;
         z-index: 2;
-        height: 40px;
+        height: 38px;
         border-radius: 12px;
         border: 1px solid green;
         background-color: #fff176;
@@ -155,6 +155,7 @@ html {
         width: 166px;
         position: fixed;
         top: 100px;
+        z-index: 3;
         background-color: white;
         border: 4px solid green;
         border-radius: 8px;
@@ -171,6 +172,7 @@ html {
         width: 166px;
         position: fixed;
         top: 100px;
+        z-index: 3;
         background-color: #FFFFE0;
         border: 4px solid green;
         border-radius: 8px;
